Bug 325471 Broken search for path to binary on linux in xulrunner-stub patch by prefiks@aviary.pl r=bsmedberg