toolkit/xre/nsAppRunner.cpp
@@ -1078,6 +1078,7 @@ XRE_GetBinaryPath(const char* argv0, nsILocalFile* *aResult)
 #elif defined(XP_UNIX)
   struct stat fileStat;
   char exePath[MAXPATHLEN];
+  char tmpPath[MAXPATHLEN];
 
   rv = NS_ERROR_FAILURE;
 
@@ -1120,8 +1121,8 @@ XRE_GetBinaryPath(const char* argv0, nsILocalFile* *aResult)
     char *newStr = pathdup;
     char *token;
     while ( (token = nsCRT::strtok(newStr, ":", &newStr)) ) {
-      sprintf(exePath, "%s/%s", token, argv0);
-      if (stat(exePath, &fileStat) == 0) {
+      sprintf(tmpPath, "%s/%s", token, argv0);
+      if (realpath(tmpPath, exePath) && stat(exePath, &fileStat) == 0) {
         found = PR_TRUE;
         break;
       }
